
+
** *Empieza con Astra Control Provisioner*
Puede hacerlo link:../use/enable-acp.html["Habilita el aprovisionador de Astra Control"^] Si ha instalado y configurado su entorno de modo que utilice Astra Trident 23,10.
** *La funcionalidad de Astra Control Provisionador*
+
Las siguientes funciones están disponibles en la versión Astra Control Provisioner 23,10:

+
*** * Seguridad de backend de almacenamiento mejorada con cifrado Kerberos 5*: Puede mejorar la seguridad del almacenamiento link:../use-acp/configure-storage-backend-encryption.html["habilitar cifrado"^] para el tráfico entre el clúster gestionado y el back-end de almacenamiento. El aprovisionador de control de Astra admite el cifrado Kerberos 5 a través de conexiones NFSv4,1 GbE desde clústeres de Red Hat OpenShift a Azure NetApp Files y volúmenes ONTAP en las instalaciones.
*** *Recuperar datos usando una instantánea*: Astra Control Provisioner proporciona una restauración de volumen rápida y en el lugar desde una instantánea usando el `TridentActionSnapshotRestore` (TASR) CR.
*** * Capacidades de copia de seguridad y restauración para aplicaciones con `ontap-nas-economy` Back-ends de almacenamiento respaldados por el conductor*: Como se describe <<nas-eco-backup-restore,anterior>>.




* *Soporte de Astra Control Service para Red Hat OpenShift Service en clústeres de AWS (ROSA)*
+
link:../get-started/add-first-cluster.html["Añadir un clúster"^]

* *Soporte para la gestión de aplicaciones que utilizan almacenamiento NVMe/TCP*
Astra Control ahora puede gestionar aplicaciones respaldadas por volúmenes persistentes que están conectados mediante NVMe/TCP.