@@ -831,7 +831,6 @@
   <block id="d64b4db98e014f5440d1f843fea08e3e" category="list-text">Los directores de servicio con ámbito de grupo de recursos Astra Control Service ahora son compatibles con los principales de servicio que utilizan un ámbito de grupo de recursos.</block>
   <block id="0f3f1a1eeb0e902fae62b05e28417935" category="inline-link-macro">Cree un principal de servicio de Azure</block>
   <block id="bf2952986042f5403c53bded609c0d9b" category="section-title">5 de agosto de 2021</block>
-  <block id="d965fac9eadc89088435d79a0e46882b" category="list-text">Astra Control Center Astra Control ya está disponible en un nuevo modelo de implementación. _Astra Control Center_ es un software autogestionado que instala y opera en su centro de datos para que pueda gestionar la gestión del ciclo de vida de las aplicaciones de Kubernetes para los clústeres Kubernetes en las instalaciones.</block>
   <block id="1966afd91050d7e96fceb59f9fd13f32" category="inline-link">Vaya a la documentación de Astra Control Center</block>
   <block id="80bfdf6309549a7797f10098e05bccc1" category="paragraph">Para obtener más información,<block ref="ba5556fa094f10e77f4fa7086cec4749" category="inline-link-rx"></block>.</block>
   <block id="eb98a9a286b93bcf890e03ce1c9063eb" category="list-text">Traiga su propio bucket, ahora puede gestionar los bloques que emplea Astra para backups y clones mediante la adición de bloques adicionales y el cambio del bloque predeterminado para los clústeres de Kubernetes de su proveedor de cloud.</block>
@@ -2090,7 +2089,6 @@
   <block id="974030a30a48754684d05541fd5e96c9" category="list-text">Google Kubernetes Engine (GKE)</block>
   <block id="445b99028268202ea6dce47e9f8a85a0" category="list-text">Red Hat OpenShift Service en AWS (ROSA)</block>
   <block id="5272b1b73b7b8f46f79fa9cdaadca15e" category="list-text">ROSA con AWS PrivateLink</block>
-  <block id="d1398a9488bb275cd91d0cb20ce8d256" category="list-text">Red Hat OpenShift Container Platform en las instalaciones</block>
   <block id="df19c91edd9b2d860753f42efea5673b" category="section-title">Instala Astra Connector</block>
   <block id="cd6d7cc4ca7e276970cfd8898e2ee94d" category="list-text">Cuando realice estos pasos, ejecute estos comandos en el clúster privado que desee administrar con Astra Control Service.</block>
   <block id="1edf1f850fb1dd3ecb6ec5a68b931d8a" category="list-text">Si utiliza un host de Bastion, emita estos comandos desde la línea de comandos del host de Bastion.</block>
@@ -2135,12 +2133,8 @@
   <block id="341784bc72164a9576c48141a8457786" category="doc">Configurar el cifrado de backend de almacenamiento</block>
   <block id="876580b79932af82226561f24b11688f" category="paragraph">Con Astra Control Provisioning, puede mejorar la seguridad de acceso a los datos al habilitar el cifrado del tráfico entre su clúster gestionado y el back-end de almacenamiento.</block>
   <block id="976a1386596f05796be42a064d0422a1" category="paragraph">Astra Control Provisioning admite el cifrado Kerberos para dos tipos de back-ends de almacenamiento:</block>
-  <block id="c0e152193948fa32b98363da93fdd8ae" category="list-text">*ONTAP en las instalaciones*: El aprovisionador de control de Astra admite el cifrado de Kerberos a través de conexiones NFSv3 y NFSv4 desde Red Hat OpenShift y los clústeres de Kubernetes ascendentes a volúmenes ONTAP locales.</block>
   <block id="efd821ece7f5d1edb285cc1f077325d0" category="list-text">*Azure NetApp Files* - El aprovisionador de control de Astra admite el cifrado de Kerberos a través de conexiones NFSv4,1 desde clústeres de Kubernetes anteriores a volúmenes de Azure NetApp Files.</block>
   <block id="0a710c309a5f6dc65b056833a5208521" category="paragraph">Puede crear, eliminar, cambiar el tamaño, copiar, clonar, Clone de solo lectura e importe volúmenes que usen cifrado NFS.</block>
-  <block id="2aff02c8ceb99a9445937af9d4d8f286" category="section-title">Configure el cifrado de Kerberos en tránsito con volúmenes de ONTAP locales</block>
-  <block id="330282591e8caa9814eb88ec524b89cf" category="paragraph">Es posible habilitar el cifrado de Kerberos en el tráfico de almacenamiento entre el clúster gestionado y un back-end de almacenamiento de ONTAP en las instalaciones.</block>
-  <block id="daf34fb0fcb74d9bcf85abcebcc8e1f2" category="admonition">El cifrado de Kerberos para el tráfico NFS con back-ends de almacenamiento de ONTAP en las instalaciones solo se admite mediante el<block ref="8321592ce24c8a122ecf26a63cfca407" prefix=" " category="inline-code"></block> controlador de almacenamiento.</block>
   <block id="bf08e3747af8cdb14b7eaf98563b8d7e" category="inline-link-macro">Habilita el aprovisionador de Astra Control</block>
   <block id="0ff02d27ae5cac1a12c6c403fd55443c" category="list-text">Asegúrese de tener acceso al<block ref="c67fd1b99934afa248dfeb285a9a4191" prefix=" " category="inline-code"></block> utilidad.</block>
   <block id="bef890ed7cc869346d4b483cd3e3ab00" category="list-text">Asegúrese de tener acceso de administrador al back-end de almacenamiento de ONTAP.</block>
@@ -2360,7 +2354,6 @@ Puede hacerlo <block ref="34554017affcf2d95a6dc49ac60c5b22" category="inline-lin
   <block id="a28c4973c51793fba9a52bb919793c55" category="list-text">*La funcionalidad de Astra Control Provisionador*</block>
   <block id="e04a039dab89abe32a55e462186f4be5" category="paragraph">Las siguientes funciones están disponibles en la versión Astra Control Provisioner 23,10:</block>
   <block id="c935990e28d9a826be6bb8ad7cbaa9c1" category="inline-link-macro">habilitar cifrado</block>
-  <block id="c0f1ffff2a89df254e7675f2a875147f" category="list-text">* Seguridad de backend de almacenamiento mejorada con cifrado Kerberos 5*: Puede mejorar la seguridad del almacenamiento <block ref="63a1519b1e13a139789d4589996b0d00" category="inline-link-macro-rx"></block> para el tráfico entre el clúster gestionado y el back-end de almacenamiento. El aprovisionador de control de Astra admite el cifrado Kerberos 5 a través de conexiones NFSv4,1 GbE desde clústeres de Red Hat OpenShift a Azure NetApp Files y volúmenes ONTAP en las instalaciones.</block>
   <block id="ab52bbefe9879da9b800f9792291f5a4" category="list-text">*Recuperar datos usando una instantánea*: Astra Control Provisioner proporciona una restauración de volumen rápida y en el lugar desde una instantánea usando el<block ref="2aabb3b01d0d54317a9eeef910e001f6" prefix=" " category="inline-code"></block> (TASR) CR.</block>
   <block id="55a9d6aa251e3c334db4ab4055a4a004" category="inline-xref">anterior</block>
   <block id="ffada8bf4e89c89a39c9186528693015" category="list-text">* Capacidades de copia de seguridad y restauración para aplicaciones con<block ref="caafdf62a2c609bfa5316118231a1007" prefix=" " category="inline-code"></block> Back-ends de almacenamiento respaldados por el conductor*: Como se describe <block ref="abf023a9d67df445290faa3fe3686bc6" category="inline-xref-macro-rx"></block>.</block>
@@ -2515,7 +2508,6 @@ Astra Control Provisioning ha reemplazado a Astra Trident como aprovisionador de
   <block id="5d169abc26c5e6f92958752c40a56358" category="cell">¿Cuáles son las distribuciones de Kubernetes compatibles?</block>
   <block id="41f1a6b80fe46fb30f51ab1b61f1a992" category="list-text">* Proveedores en la nube*</block>
   <block id="57c997cc6378705850c1e534b71a042d" category="list-text">*Clusters autogestionados*</block>
-  <block id="bab5ccef18c501c42d7cf94c7aaa84b3" category="list-text">*Clusters on-premise*</block>
   <block id="22ec69733e61456fac578b2f6fcc2856" category="list-text">Azure Kubernetes Service en HCI de pila de Azure</block>
   <block id="1c4dff0a00340691e103ef63154df371" category="list-text">Anthos de Google</block>
   <block id="408bc02fc5ae5048343ebe28f7180f1e" category="list-text">Utiliza el nuevo rol de administrador para instalar el enlace../concepts/architecture#astra-control-components[Astra Control Provisioner] en el clúster y crear una o varias clases de almacenamiento.</block>
@@ -2682,4 +2674,13 @@ Al promocionar un volumen de destino a un volumen de ReadWrite normal, se puede 
   <block id="a34b088697717e6985d362f6f34cb3cd" category="list-text">Selecciona *Astra Control Service* como línea de productos.</block>
   <block id="e41e554158031f0f3160a545e232ed02" category="list-text">Introduzca el valor captcha.</block>
   <block id="6ea2f3e9291aa9fe05308c7ef844a5f2" category="list-text">Seleccione la casilla de verificación para confirmar que ha leído la Política de privacidad de NetApp.</block>
+  <block id="fae11419c337e3427841a0c9b9d592f9" category="list-text">Red Hat OpenShift Container Platform en las instalaciones</block>
+  <block id="8e9845a2b1617722638d4b2716d9e349" category="list-text">* Clústeres locales*</block>
+  <block id="08451abaef86ef74512d1771c506741a" category="list-text">*ONTAP en las instalaciones* - El aprovisionador de control de Astra admite el cifrado de Kerberos a través de conexiones NFSv3 y NFSv4 desde Red Hat OpenShift y los clústeres de Kubernetes ascendentes a volúmenes ONTAP locales.</block>
+  <block id="0b660ae85d215a9e70834a4e745fe95b" category="section-title">Configure el cifrado de Kerberos en tránsito con volúmenes de ONTAP en las instalaciones</block>
+  <block id="7c139dfc85d7e4497d2109fff4d0893f" category="paragraph">Puede habilitar el cifrado de Kerberos en el tráfico de almacenamiento entre su clúster gestionado y un back-end de almacenamiento de ONTAP en las instalaciones.</block>
+  <block id="4733fee3df7d4e6e25e68e5ad7d2adf0" category="admonition">El cifrado de Kerberos para el tráfico NFS con back-ends de almacenamiento de ONTAP en las instalaciones solo se admite mediante el<block ref="8321592ce24c8a122ecf26a63cfca407" prefix=" " category="inline-code"></block> controlador de almacenamiento.</block>
+  <block id="df3d75a39182fab8d217744cdb76529e" category="list-text">* Seguridad de backend de almacenamiento mejorada con cifrado Kerberos 5*: Puede mejorar la seguridad del almacenamiento <block ref="63a1519b1e13a139789d4589996b0d00" category="inline-link-macro-rx"></block> para el tráfico entre el clúster gestionado y el back-end de almacenamiento. El aprovisionador de control de Astra admite el cifrado de Kerberos 5 a través de conexiones NFSv4,1 GbE desde clústeres de Red Hat OpenShift a volúmenes Azure NetApp Files y ONTAP en las instalaciones.</block>
+  <block id="931459f37abea3d820afa0fcf0ecfef7" category="list-text">Astra Control Center
+Astra Control ya está disponible en un nuevo modelo de puesta en marcha. _Astra Control Center_ es un software autogestionado que se instala y opera en el centro de datos para poder gestionar la gestión del ciclo de vida de las aplicaciones de Kubernetes para clústeres de Kubernetes en las instalaciones.</block>
 </blocks>
